--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,6 +10,6 @@ Snapblocks is a fork of [scratchblocks](https://scratchblocks.github.io/), but i
 
 ## Getting started
 
-If you want to know how to write snapblcoks, see [Syntax](/Syntax)
+If you want to know how to write snapblcoks, see [Syntax](/syntax)
 
-For library documentation for devs, see the [Library Documentation](/Library)
+For library documentation for devs, see the [Library Documentation](/library)
