--- a/docs/syntax/syntax.mdx
+++ b/docs/syntax/syntax.mdx
@@ -40,7 +40,7 @@ Every block goes on a new line and is written as the text on the block is shown 
 
 ## Arguments
 
-[Arguments](Arguments "wikilink"), or inputs to a block, are represented
+Arguments, or inputs to a block, are represented
 within the block with various codes.
 
 ### Numerical Insert
@@ -64,7 +64,7 @@ move (10) steps
 
 ### String Insert
 
-[String](String "wikilink") inputs are created with square brackets:
+String inputs are created with square brackets:
 `[lorem ipsum]`
 
 ```
@@ -298,7 +298,7 @@ repeat (10) {
 ### Custom Block Inputs
 
 If one tries to use an input reporter without making a block definition
-first, it will appear as a [variable](variable "wikilink").
+first, it will appear as a variable.
 
 ```
 say (height)
@@ -430,11 +430,11 @@ However, this is considered poor style and is not recommended.
 ## Hacks
 
 The blocks plugin offers hacks to allow representation of scripts from
-[Scratch Modifications](Scratch_Modifications "wikilink") and old or
+Scratch Modifications and old or
 unreleased versions of Scratch.
 
-For a full tutorial on how to use scratchblocks hacks, see [this
-topic](topic:55586 "wikilink").
+// For a full tutorial on how to use scratchblocks hacks, see [this
+// topic](topic:55586 "wikilink").
 
 ### Color and Shape Changing
 
@@ -633,7 +633,7 @@ report [Done!]:: control cap
 
 ### GP
 
-This plugin also includes hacks to [GP](GP "wikilink").
+This plugin also includes hacks to GP.
 <!--
 <SnapBlocks>
 {`
