--- a/docs/syntax/syntax.mdx
+++ b/docs/syntax/syntax.mdx
@@ -571,7 +571,7 @@ Reporters and predicates are easier, because you can just hit enter.
 `}
 </SnapBlocks>
 
-However, you cannot put multiple inputs vertically on the same line, like in the <SnapBlocks inline="true">{`(pipe [] @arrowRight (() @verticalEllipsis @addInput))`}</SnapBlocks> block.
+However, you cannot put multiple inputs vertically on the same line, like in the <SnapBlocks inline="true">{`(pipe [] @arrowRight (() @addInput) @delInput @verticalEllipsis @addInput)`}</SnapBlocks> block.
 
 ## Multiline input
 
