add multiline comments

--- a/docs/syntax/syntax.mdx
+++ b/docs/syntax/syntax.mdx
@@ -662,3 +662,21 @@ block // comment
 block // comment
 `}
 </SnapBlocks>
+
+You can create multiline comments by enclosing it within `/* text */`.
+
+```snapblocks
+/* multiline
+comment */
+multiline /* block
+with comment */
+```
+
+<SnapBlocks>
+{`
+/* multiline
+comment */
+multiline /* block
+with comment */
+`}
+</SnapBlocks>
