update list of icons

--- a/docs/syntax/syntax.mdx
+++ b/docs/syntax/syntax.mdx
@@ -390,11 +390,16 @@ Here's a list of all available icons.
 
 <SnapBlocks>
 {`
+greenflag @greenflag :: other
 greenFlag @greenFlag :: other
 flag @flag :: other
-stopSign stop @stopSign :: other
+stopSign @stopSign :: other
+stop @stop :: other
+octagon @octagon :: other
 turnLeft @turnLeft :: other
 turnRight @turnRight :: other
+clockwise @clockwise :: other
+counterclockwise @counterclockwise :: other
 loop @loop :: other
 loopArrow @loopArrow :: other
 addInput @addInput :: other
@@ -409,14 +414,17 @@ cloud @cloud :: other
 cloudGradient @cloudGradient :: other
 cloudOutline @cloudOutline :: other
 flash @flash :: other
+blitz @blitz :: other
 camera @camera :: other
-circle @circle :: other
 circleSolid @circleSolid :: other
+circle @circle :: other
+ellipse @ellipse :: other
 notes @notes :: other
 storage @storage :: other
 brush @brush :: other
 pipette @pipette :: other
-paintBucket bucket @paintBucket :: other
+paintbucket @paintbucket :: other
+bucket @bucket :: other
 eraser @eraser :: other
 location @location :: other
 gears @gears :: other
@@ -426,6 +434,42 @@ globe @globe :: other
 globeBig @globeBig :: other
 square @square :: other
 robot @robot :: other
+stepForward @stepForward :: other
+file @file :: other
+fullScreen @fullScreen :: other
+grow @grow :: other
+normalScreen @normalScreen :: other
+shrink @shrink :: other
+smallStage @smallStage :: other
+normalStage @normalStage :: other
+stage @stage :: other
+turnAround @turnAround :: other
+poster @poster :: other
+tick @tick :: other
+checkedBox @checkedBox :: other
+rectangle @rectangle :: other
+rectangleSolid @rectangleSolid :: other
+dot @dot :: other
+line @line :: other
+cross @cross :: other
+crosshairs @crosshairs :: other
+speechBubble @speechBubble :: other
+speechBubbleOutline @speechBubbleOutline :: other
+turnBack @turnBack :: other
+turnForward @turnForward :: other
+magnifyingGlass @magnifyingGlass :: other
+magnifierOutline @magnifierOutline :: other
+selection @selection :: other
+polygon @polygon :: other
+closedBrush @closedBrush :: other
+footprints @footprints :: other
+keyboard @keyboard :: other
+keyboardFilled @keyboardFilled :: other
+listNarrow @listNarrow :: other
+flipVertical @flipVertical :: other
+flipHorizontal @flipHorizontal :: other
+trash @trash :: other
+trashFull @trashFull :: other
 arrowUp @arrowUp :: other
 arrowUpOutline @arrowUpOutline :: other
 arrowUpThin @arrowUpThin :: other
