add icon and text scale and color

--- a/docs/syntax/syntax.mdx
+++ b/docs/syntax/syntax.mdx
@@ -385,6 +385,32 @@ pause all $pause
 `}
 </SnapBlocks>
 
+### Icon and text scale and color
+
+You can change the scale and color of icons by adding `-scale-r-g-b` at the end of the icon name.
+
+```snapblocks
+@flag-2-255-100-2 :: other
+```
+
+<SnapBlocks>
+{`
+@flag-2-255-100-2 :: other
+`}
+</SnapBlocks>
+
+You can also change the scale and color of text using this system, only you have to put the text after `$`, not `@`.
+
+```snapblocks
+$text-2-200-200-100
+```
+
+<SnapBlocks>
+{`
+\$text-2-200-200-100
+`}
+</SnapBlocks>
+
 ### list of icons
 Here's a list of all available icons.
 
