--- a/docs/syntax/syntax.mdx
+++ b/docs/syntax/syntax.mdx
@@ -584,6 +584,9 @@ turn @counterclockwise (15) degrees
 turn @turnLeft (15) degrees
 turn ccw (15) degrees
 turn left (15) degrees
+
+pause all @pause
+pause all
 ```
 
 <SnapBlocks>
@@ -602,6 +605,9 @@ turn @counterclockwise (15) degrees
 turn @turnLeft (15) degrees
 turn ccw (15) degrees
 turn left (15) degrees
+
+pause all @pause
+pause all
 `}
 </SnapBlocks>
 
